--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,18 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #165dfc; /* your primary color */
 }
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
