--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary: #165dfc; /* your primary color */
+  --primary: #165dfc;
+  /* your primary color */
 }
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -17,7 +19,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #000;
   }
 }
 
