--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #000;
   }
 }
@@ -26,5 +26,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
